Fix exported symbols

--- a/lib/my_server/CMakeLists.txt
+++ b/lib/my_server/CMakeLists.txt
@@ -5,11 +5,14 @@ set(ROOT_PATH .)
 
 set_project_settings(my_server)
 
+set(CMAKE_CXX_VISIBILITY_PRESET hidden)
+set(CMAKE_VISIBILITY_INLINES_HIDDEN 1)
+
 find_package(Poco REQUIRED Net)
 
 if (MSVC)
-  #set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
-  #set(BUILD_SHARED_LIBS TRUE)
+  set(BUILD_SHARED_LIBS TRUE)
+  add_definitions(-DBUILDING_DLL=ON)
   set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/Debug)
   set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/Release)
   set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_BINARY_DIR}/RelWithDebInfo)
